@@ -22,6 +22,7 @@ import net.minecraft.data.DataProvider;
 import net.minecraft.data.HashCache;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.Tag;
+import net.minecraft.tags.TagKey;
 import org.slf4j.Logger;
 
 public abstract class TagsProvider<T> implements DataProvider {
@@ -45,9 +46,9 @@ public abstract class TagsProvider<T> implements DataProvider {
 		this.builders
 			.forEach(
 				(resourceLocation, builder) -> {
-					List<Tag.BuilderEntry> list = (List<Tag.BuilderEntry>)builder.getEntries()
-						.filter(builderEntry -> !builderEntry.getEntry().verifyIfPresent(this.registry::containsKey, this.builders::containsKey))
-						.collect(Collectors.toList());
+					List<Tag.BuilderEntry> list = builder.getEntries()
+						.filter(builderEntry -> !builderEntry.entry().verifyIfPresent(this.registry::containsKey, this.builders::containsKey))
+						.toList();
 					if (!list.isEmpty()) {
 						throw new IllegalArgumentException(
 							String.format(
@@ -97,13 +98,13 @@ public abstract class TagsProvider<T> implements DataProvider {
 
 	protected abstract Path getPath(ResourceLocation resourceLocation);
 
-	protected TagsProvider.TagAppender<T> tag(Tag.Named<T> named) {
-		Tag.Builder builder = this.getOrCreateRawBuilder(named);
+	protected TagsProvider.TagAppender<T> tag(TagKey<T> tagKey) {
+		Tag.Builder builder = this.getOrCreateRawBuilder(tagKey);
 		return new TagsProvider.TagAppender<>(builder, this.registry, "vanilla");
 	}
 
-	protected Tag.Builder getOrCreateRawBuilder(Tag.Named<T> named) {
-		return (Tag.Builder)this.builders.computeIfAbsent(named.getName(), resourceLocation -> new Tag.Builder());
+	protected Tag.Builder getOrCreateRawBuilder(TagKey<T> tagKey) {
+		return (Tag.Builder)this.builders.computeIfAbsent(tagKey.location(), resourceLocation -> new Tag.Builder());
 	}
 
 	protected static class TagAppender<T> {
@@ -127,8 +128,8 @@ public abstract class TagsProvider<T> implements DataProvider {
 			return this;
 		}
 
-		public TagsProvider.TagAppender<T> addTag(Tag.Named<T> named) {
-			this.builder.addTag(named.getName(), this.source);
+		public TagsProvider.TagAppender<T> addTag(TagKey<T> tagKey) {
+			this.builder.addTag(tagKey.location(), this.source);
 			return this;
 		}
 
